--- a/exercicios/cordel/estilo/style.css
+++ b/exercicios/cordel/estilo/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: #fff;
     color: #000;
@@ -66,14 +70,29 @@ section.normal {
 section.imagem {
     background-color: #222222;
     color: #fff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
 section.imagem > p {
-    background-color: #0000003d;
+    background-color: #0000006c;
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px #000;
 }
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+}
+
 footer {
     background-color: #000;
     color: #fff;
