--- a/exercicios/media-queries/mq005/estilos/style.css
+++ b/exercicios/media-queries/mq005/estilos/style.css
@@ -20,8 +20,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+#burguer {
+    background-color: rgb(37, 37, 37);
     display: block;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#burguer:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
