--- a/exercicios/flexbox/flex013 - menu-flexbox/style.css
+++ b/exercicios/flexbox/flex013 - menu-flexbox/style.css
@@ -18,14 +18,40 @@ header {
     background-color: grey;
     color: #fff;
     padding: 10px;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header > h1 {
     border: 1px dotted #000;
+    flex: 0 0 200px;
+}
+
+header > nav > a {
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+}
+
+header > nav > a:hover {
+    background-color: #fff;
+    color: #000;
+    transition: .5s;
 }
 
 nav {
     border: 1px dotted #000;
+    display: flex;
+
+    flex-flow: row wrap;
+    justify-content: flex-end;
 }
 
 main {
